ajustes de metas

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     
     <picture>
         <source media="(max-width:370px)" srcset="imagens/dyvdmpq.jpg">
-        <img id="ftt" src="imagens/dyvdpq.jpg" alt="">
+        <img id="ftt" src="imagens/dyvdpq.jpg" alt="imagen de Deyvid ">
     </picture>
     <div id="about">
         <p id="ps">Sou<strong> Deyvid Oliveira Silva</strong>,formado pela escola Liceu Muniz Freire, tenho 18 anos, adoro trabalhar com Desenvolvendo de landing pages e amo a parte artística. Sempre tento terminar o projeto com maior profissionalismo possivel e com a maior qualidade/responsividade e harmonia visual para o projeto. </p>
@@ -65,7 +65,7 @@
 
     <picture>
         <source media="(max-width:700px)" srcset="imagens/html.png">
-        <img id="gr" src="imagens/a.png" alt="">
+        <img id="gr" src="imagens/a.png" alt="imagen">
     </picture>
     
   
