--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
     <div id="ctt">
         <h1>Contato</h1>
         <div class="bloco1">
-            <img src="imagens/esboco-de-email.png" alt="icone do email"><h4>deyvidoliveira003@gmail.com</h4> 
+            <img src="imagens/esboco-de-email.png" alt="icone do email"><h4>deyvid4900@gmail.com</h4> 
 
         </div>
         <div class="bloco2"><img src="imagens/telefone.png" alt="icone de u telefone"> <h4>28-998836858</h4></div>
@@ -96,13 +96,6 @@
 
 <footer>
     Site feito Por <span>Deyvid Oliveira Silva</span>
-    <div>Ícones feitos por <a href="https://www.flaticon.com/br/autores/ilham-fitrotul-hayat"target="blank" title="Ilham Fitrotul Hayat" target="blank">Ilham Fitrotul Hayat</a> from<a href="https://www.flaticon.com/br/" title="Flaticon" target="blank">www.flaticon.com</a></div>
-    <div>Ícones feitos por <a href="https://www.freepik.com" title="Freepik"target="blank">Freepik</a> from <a href="https://www.flaticon.com/br/"target="blank" title="Flaticon">www.flaticon.com</a></div>
-    <div>Ícones feitos por <a href="https://www.flaticon.com/br/autores/momento-design" title="Momento Design"target="blank">Momento Design</a> from <a href="https://www.flaticon.com/br/" target="blank"title="Flaticon">www.flaticon.com</a></div>
-    <div>Ícones feitos por <a href="https://www.flaticon.com/br/autores/sbts2018" title="SBTS2018"target="blank">SBTS2018</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"target="blank">www.flaticon.com</a></div>
-    <div>Ícones feitos por <a href="https://www.flaticon.com/br/autores/good-ware" title="Good Ware"target="blank">Good Ware</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"target="blank">www.flaticon.com</a></div>
-    <div>Ícones feitos por <a href="https://www.flaticon.com/br/autores/pictogramer" title="pictogramer"target="blank"></a>pictogramer </a> from <a href="https://www.flaticon.com/br/" title="Flaticon"target="blank">www.flaticon.com</a></div>
-    <div>Ícones feitos por <a href="https://www.flaticon.com/br/autores/smashicons" title="Smashicons"target="blank" >Smashicons</a> from <a href="https://www.flaticon.com/br/" title="Flaticon"target="blank">www.flaticon.com</a></div>
 </footer>
 </body>
 </html>
